<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Messaging</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
 	<string name="action_newSMS">NewSMS</string>
 	<string name="action_overflow">Overflow</string>
 	<string name="action_spam">Spam</string>
 	<string name="action_folder">Folders</string>
 	<string name="action_settings_app">Settings</string>
</resources>

